--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/bouzuya/cltw/issues"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "psc-package": "^0.3.2",
     "purescript": "^0.12.0"
   },
