--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cltw",
-  "description": "cltw",
+  "description": "Commit and Tweet Counter",
   "version": "0.0.0",
   "author": {
     "email": "m@bouzuya.net",
